fixed the mistakes 2